--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ckeditor5-premium-features": "^43.1.1",
     "firebase": "^10.13.2",
     "iconsax-react": "^0.0.8",
+    "jwt-decode": "^4.0.0",
     "query-string": "^9.1.0",
     "re-resizable": "^6.10.0",
     "react": "^18.3.1",
