--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "ckeditor5": "^43.1.1",
     "ckeditor5-premium-features": "^43.1.1",
+    "file-saver": "^2.0.5",
     "firebase": "^10.13.2",
     "iconsax-react": "^0.0.8",
     "jwt-decode": "^4.0.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
